Fix table overlapping with footer

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -949,7 +949,7 @@ body {
 }
 
 .p-strip-account-page {
-  height: 600px;
+  min-height: 600px;
 
   @media (max-width: $breakpoint-small) {
     height: auto;
